<resources>
    <string name="admob_app_id" translatable="false">ca-app-pub-9964109306515647~8922665812</string>
    <string name="admob_m001" translatable="false">ca-app-pub-9964109306515647/5829598610</string>
    <string name="admob_s001" translatable="false">ca-app-pub-9964109306515647/1199092619</string>
    <string name="admob_banner" translatable="false">ca-app-pub-9964109306515647/4012958215</string>
    <string name="admob_interstical" translatable="false">ca-app-pub-9964109306515647/3416838476</string>
    <string name="app_name">Control de Crecimiento Infantil</string>
    <string name="action_add_favourite" translatable="false">Add to Favourites</string>
    <string name="action_play_next" translatable="false">Play Next</string>
    <string name="backdrop_title" translatable="false">LISTADO DE NIÑOS</string>
    <string name="backdrop_subtitle" translatable="false">Child Growth Standards</string>
    <string name="splash_subtitle">Control de Crecimiento Infantil</string>
    <string-array name="weight_units">
        <item>Kilogramos</item>
        <item>Libras</item>
    </string-array>
    <string-array name="weight_units_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="height_units">
        <item>Centimetros</item>
        <item>Pulgadas</item>
    </string-array>
    <string-array name="height_units_values" translatable="false">
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="title_activity_welcome" translatable="false">Home Screen</string>
    <string name="next">Siguiente</string>
    <string name="skip">Saltar</string>
    <string name="start">Entiendo</string>
    <string name="slide_1_title">¡Bienvenido!</string>
    <string name="slide_1_desc">¡La manera más fácil para dar seguimiento al desarrollo de tus
    hijos desde el primer día de vida hasta los  19 años de edad! \n\n Puedes dar seguimiento a uno o más niños a la vez.</string>
    <string name="slide_2_title">Datos OMS</string>
    <string name="slide_2_desc">Los datos usados en las gráficas son tomados de la página oficial
        de la Organización Mundial de la Salud</string>
    <string name="slide_3_title">Percentiles</string>
    <string name="slide_3_desc">Las gráficas de curvas percentiles te permitirán llevar mejor control sobre el desarrollo de tus hijos, además
    te permitirán detectar tendencias en su crecimiento!</string>
    <string name="slide_4_title">Medidas</string>
    <string name="slide_4_desc">Compara las medidas con los percentiles de IMC y Altura hasta los 19 años,
    Peso hasta los 10 años,  Perímetro cefálico y Peso para la altura hasta los 5 años. </string>
    <string name="play_again_desc" translatable="false">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again" translatable="false">Play Again</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="main.emty.title">No hay datos que mostrar.</string>
    <string name="main.empty.suggest">Registra a uno o mas niños y comienza a dar seguimiento a su crecimiento.</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_new_history_record">Registrar medidas</string>
    <string name="title_activity_percentiles">Percentiles</string>
    <string name="title_activity_main2">Percentiles</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="record_child">Registrar infante</string>
    <string name="kilogram">Kilogramos</string>
    <string name="kg" translatable="false">%1$s kg</string>
    <string name="centimeter">Centímetros</string>
    <string name="cm" translatable="false">%1$s cm</string>
    <string name="cm_av" translatable="false">CM</string>
    <string name="kg_av" translatable="false">KG</string>
    <string name="in_av" translatable="false">IN</string>
    <string name="lb_av" translatable="false">LB</string>
    <string name="peso_ideal_lb">Peso ideal: %1$s lb</string>
    <string name="peso_ideal_kg">Peso ideal: %1$s kg</string>
    <string name="altura_ideal_cm">Altura ideal: %1$s cm</string>
    <string name="altura_ideal_in">Altura ideal: %1$s in</string>
    <string name="pc_ideal_cm">Perímetro cefálico  ideal: %1$s cm</string>
    <string name="pc_ideal_in">Perímetro cefálico  ideal: %1$s in</string>
    <string name="above_normal">Por encima de lo normal: \u0020</string>
    <string name="well_above_normal">Muy por encima de lo normal: \u0020</string>
    <string name="below_normal">Por debajo de lo normal: \u0020</string>
    <string name="well_below_normal">Muy por debajo de lo normal: \u0020</string>
    <string name="normal">Normal:\u0020</string>
    <string name="imc_ideal">IMC ideal: %1$s</string>
    <string name="pounds">Libras</string>
    <string name="pnd" translatable="false">%1$s lb</string>
    <string name="inches">Pulgadas</string>
    <string name="in" translatable="false">%1$s in</string>
    <string name="days">\u0020 días \u0020</string>
    <string name="day">\u0020día</string>
    <string name="weeks">\u0020 semanas \u0020</string>
    <string name="week">\u0020semana\u0020</string>
    <string name="months">\u0020meses\u0020</string>
    <string name="month">\u0020mes\u0020</string>
    <string name="years">\u0020 años \u0020</string>
    <string name="year">\u0020 año\u0020</string>
    <string name="weight">Peso \u0020</string>
    <string name="height">Altura\u0020</string>
    <string name="perimeter">Perímetro\u0020</string>
    <string name="most_recent">Medida más reciente</string>
    <string name="record_measure"> Registrar medidas</string>
    <string name="show_perc"> Ver percentiles</string>
    <string name="edit">Editar infante</string>
    <string name="delete">Eliminar</string>
    <string name="len_Height">Altura</string>
    <string name="len_Height_cm">Longitud/Altura (cm)</string>
    <string name="cefalic_perimeter"> Perímetro cefálico</string>
    <string name="cefalic_perimeter_cm"> Perímetro cefálico (cm)</string>
    <string name="measure_date">Fecha de la medida</string>
    <string name="dif_date">Puedes seleccionar una fecha diferente.</string>
    <string name="outOfRange">Valor fuera de rango</string>
    <string name="weightHeight">Peso/Altura</string>
    <string name="weightForage">Peso para la edad</string>
    <string name="weightForlen">Peso para la Longitud/Estatura</string>
    <string name="len_for_age">Longitud/Altura para la edad</string>
    <string name="imc_for_age">IMC para la edad</string>
    <string name="cefalic_perimeter_for_age">Perímetro cefálico para la edad</string>
    <string name="name">Nombre</string>
    <string name="boy">Niño</string>
    <string name="age">Edad:\u0020</string>
    <string name="girl">Niña</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="chk_msg">Ingresar medidas luego de guardar</string>
    <string name="save">Guardar</string>
    <string name="date_format">dd-mmm-aa</string>
    <string name="percentil_desc">
     En las curvas de Patrones de Crecimiento de la OMS se muestran cinco curvas
        (rojo, naranja y verde)  que corresponden a los percentiles
        P3, P15, P50, P85 y P97  en orden de abajo hacia arriba. \n\n

        La curva central o percentil 50 es la media o promedio.
        Un niño con crecimiento normal típicamente tendrá una curva de crecimiento aproximadamente paralela a la media.
        Un solo punto no es suficiente para evaluar con precisión el crecimiento de un niño.
        Se necesitan una serie de puntos para poder entender los patrones y tendencias de crecimiento de un niño en el tiempo.
    </string>
    <string name="weight_desc">
            Los niños se podrian considerar bajos de peso si su peso para la edad queda por debajo del percentil 15.
        Un punto que caiga debajo del percentil 3 podria indicar peso severamente inferior al normal, indicando que el niño necesita cuidados especiales.
        El peso severamente bajo puede ser el resultado de crecimiento retrasado, desnutrición o ambos.
        \n\n
        En todo caso si las medidas caen en uno de los percentiles limites sea inferior o superior es recomendable consulte a su medico sobre la salud
        de su niño.
    </string>
    <string name="height_desc">
          El crecimiento de un niño se considera retrasado si su longitud para la edad queda por
        debajo del percentil 15. Los infantes y niños pequeños con crecimiento retrasado pueden recuperar parte
        del potencial de crecimiento si se mejora su nutrición antes de los 2 años de edad.
        En cambio, para los niños mayores de 2 años que están en situaciones de privación nutricional,
        el retraso en su crecimiento podria ser virtualmente irreversible.
        \n\n
        En todo caso si las medidas caen en uno de los percentiles limites sea inferior o superior es recomendable consulte a su medico sobre la salud
        de su niño.
    </string>
    <string name="weight_for_height_desc">
            Los niños se podrian considerar en desnutricion si su peso para la altura/longitud queda por debajo del percentil 15.
       La desnutrición es una causa importante de mortalidad para los niños menores a 5 años
        por lo que un niño que se evalúe como [[ desnutrido ]] requiere inmediata atención médica.
        Los niños que tengan peso para la longitud por arriba del percentil 85 se consideran con sobrepeso y pueden estar en riesgo de sufrir obesidad infantil.
        \n\n
        En todo caso si las medidas caen en uno de los percentiles limites sea inferior o superior es recomendable consulte a su medico sobre la salud
        de su niño.
    </string>
    <string name="cefalic_desc">
        Los niños cuyo perímetro cefálico esté por debajo del percentil 15 se podrian considerar microcefálicos.
        Por el contrario, la macrocefalia es una condición que se indica cuando el perímetro cefálico es superior el percentil 85.
        Es importante que un médico evalúe a los niños que resulten micro o macrocefálicos.
    Podría haber serias implicaciones médicas,
        ya que se asume que el perímetro cefálico sirve como un indicador básico del crecimiento cerebral.
         \n\n
        En todo caso si las medidas caen en uno de los percentiles limites sea inferior o superior es recomendable consulte a su medico sobre la salud
        de su niño.
    </string>
    <string name="gallery">Galería</string>
    <string name="camera">Cámara</string>
    <string name="select_from">Seleccionar de</string>
    <string name="seguimiento">Seguimiento</string>
    <string name="help">Ayuda</string>
    <string name="share">Compartir</string>
    <string name="rate">Valorar app</string>
    <string name="pref_weight_unit_title">Unidad de peso</string>
    <string name="pref_height_unit_title">Unidad de longitud</string>
    <string name="action_settings">Configuración</string>
    <string name="pref_summary">Selecciona la unidad de media para mostrar</string>
    <string name="show_marker">Mostrar marcador</string>
    <string name="show_marker_desc">Habilita el marcador que muestra los valores del punto seleccionado en los graficos</string>
</resources>