<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:icon="@drawable/calendar_2"
            android:id="@+id/menu_seguimiento"
            android:title="@string/seguimiento"/>
        <!--
        <item
            android:icon="@drawable/line_chart"
            android:id="@+id/menu_percentiles"
            android:title="@string/title_activity_main2"/>
            -->
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="Otras opciones">
        <menu>
            <item
                android:icon="@drawable/ic_settings_1"
                android:id="@+id/menu_opcion_1"
                android:title="@string/action_settings"/>

            <item
                android:id="@+id/nav_export"
                android:icon="@drawable/ic_file_upload"
                android:title="@string/export" />
            <item
                android:id="@+id/nav_import"
                android:icon="@drawable/ic_file_download"
                android:title="@string/_import" />
            <item
                android:icon="@drawable/ic_help"
                android:id="@+id/menu_opcion_2"
                android:title="@string/help"/>

            <item
                android:icon="@drawable/ic_star"
                android:id="@+id/menu_opcion_3"
                android:title="@string/rate"/>

            <item
                android:icon="@drawable/ic_share_alt"
                android:id="@+id/menu_opcion_4"
                android:title="@string/share"/>
        </menu>
    </item>

</menu>