<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#FFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:id="@+id/childName"
        android:layout_marginStart="@dimen/dimen_16_dp"
        android:layout_marginEnd="@dimen/dimen_16_dp"
        android:text="@string/select_from"
        android:layout_width="match_parent"
        android:layout_height="48dp" />


            <LinearLayout
                android:id="@+id/ic_gallery"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="48dp">

        <ImageView
            app:tint="@color/md_black_1000_50"
            android:layout_marginStart="@dimen/dimen_16_dp"
            android:layout_marginEnd="@dimen/dimen_16_dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/gallery"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dimen_16_dp"
            android:layout_marginStart="@dimen/dimen_16_dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:text="@string/gallery"
            android:layout_height="wrap_content" />

    </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ic_camera"
            android:layout_width="match_parent"
            android:layout_height="48dp">

        <ImageView
            app:tint="@color/md_black_1000_50"
            android:layout_marginStart="@dimen/dimen_16_dp"
            android:layout_marginEnd="@dimen/dimen_16_dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/camera"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimen_16_dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:text="@string/camera"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>