<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/childName"
        android:layout_marginStart="@dimen/dimen_16_dp"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="48dp" />

        <LinearLayout
            android:id="@+id/add_measures"
            android:layout_marginTop="@dimen/dimen_8_dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <android.support.v7.widget.AppCompatImageView
            app:tint="@color/md_black_1000_50"
            android:layout_marginStart="@dimen/dimen_16_dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_school_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimen_32_dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:text="@string/record_measure"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/show_child_details"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <android.support.v7.widget.AppCompatImageView
                app:tint="@color/md_black_1000_50"
                android:layout_marginStart="@dimen/dimen_16_dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_child_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_32_dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:text="@string/seguimiento"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/edit_child"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <android.support.v7.widget.AppCompatImageView
            app:tint="@color/md_black_1000_50"
            android:layout_marginStart="@dimen/dimen_16_dp" android:layout_gravity="center"
            app:srcCompat="@drawable/ic_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimen_32_dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:text="@string/edit"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete_child"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_marginStart="@dimen/dimen_16_dp"
            android:layout_gravity="center"
            app:tint="@color/md_black_1000_50"
            app:srcCompat="@drawable/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dimen_32_dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:text="@string/delete"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>